antlr/kiaParser.py
# Generated from kia.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class kiaParser ( Parser ):

    grammarFileName = "kia.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'>='", "'<='", "'and'", "'or'", "'!='", 
                     "'var'", "','", "';'", "'*'", "'/'", "'+'", "'-'", 
                     "'!'", "'='", "'<'", "'>'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'while'", "'integer'", "'float'", "'if'", 
                     "'call'", "':'", "'function'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'print'", 
                     "'break'", "'continue'" ]

    symbolicNames = [ "<INVALID>", "MORE_EQUAL", "LESS_EQUAL", "AND", "OR", 
                      "NEGEQ", "VAR", "COMMA", "SEMI_COLON", "MULTIPLY", 
                      "DIVISION", "SUM", "MINUS", "NEGATION", "EQUAL", "LESS", 
                      "MORE_", "STRING", "END", "BEGIN", "CYCLE", "INTEGER", 
                      "FLOAT", "IF", "CALL", "COLON", "FUNCTION", "NAME_FUNCTION", 
                      "VARIABLE", "INT_DIGIT", "FLOAT_DIGIT", "OPEN_PAREN", 
                      "CLOSE_PAREN", "PRINT", "BREAK", "CONTINUE", "WS" ]

    RULE_program = 0
    RULE_block = 1
    RULE_vars_ = 2
    RULE_types = 3
    RULE_function = 4
    RULE_statement = 5
    RULE_assign = 6
    RULE_call = 7
    RULE_print_ = 8
    RULE_literal = 9
    RULE_beginstmt = 10
    RULE_if_ = 11
    RULE_while_ = 12
    RULE_break_cont = 13
    RULE_condition = 14
    RULE_and_or = 15
    RULE_compare_operators = 16
    RULE_expression = 17
    RULE_term = 18
    RULE_factor = 19
    RULE_variable = 20
    RULE_digit = 21

    ruleNames =  [ "program", "block", "vars_", "types", "function", "statement", 
                   "assign", "call", "print_", "literal", "beginstmt", "if_", 
                   "while_", "break_cont", "condition", "and_or", "compare_operators", 
                   "expression", "term", "factor", "variable", "digit" ]

    EOF = Token.EOF
    MORE_EQUAL=1
    LESS_EQUAL=2
    AND=3
    OR=4
    NEGEQ=5
    VAR=6
    COMMA=7
    SEMI_COLON=8
    MULTIPLY=9
    DIVISION=10
    SUM=11
    MINUS=12
    NEGATION=13
    EQUAL=14
    LESS=15
    MORE_=16
    STRING=17
    END=18
    BEGIN=19
    CYCLE=20
    INTEGER=21
    FLOAT=22
    IF=23
    CALL=24
    COLON=25
    FUNCTION=26
    NAME_FUNCTION=27
    VARIABLE=28
    INT_DIGIT=29
    FLOAT_DIGIT=30
    OPEN_PAREN=31
    CLOSE_PAREN=32
    PRINT=33
    BREAK=34
    CONTINUE=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(kiaParser.BlockContext,0)


        def getRuleIndex(self):
            return kiaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = kiaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def beginstmt(self):
            return self.getTypedRuleContext(kiaParser.BeginstmtContext,0)


        def vars_(self):
            return self.getTypedRuleContext(kiaParser.Vars_Context,0)


        def getRuleIndex(self):
            return kiaParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = kiaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==kiaParser.VAR:
                self.state = 46
                self.vars_()


            self.state = 49
            self.beginstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(kiaParser.VAR, 0)

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kiaParser.VariableContext)
            else:
                return self.getTypedRuleContext(kiaParser.VariableContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(kiaParser.COLON)
            else:
                return self.getToken(kiaParser.COLON, i)

        def types(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kiaParser.TypesContext)
            else:
                return self.getTypedRuleContext(kiaParser.TypesContext,i)


        def SEMI_COLON(self, i:int=None):
            if i is None:
                return self.getTokens(kiaParser.SEMI_COLON)
            else:
                return self.getToken(kiaParser.SEMI_COLON, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(kiaParser.COMMA)
            else:
                return self.getToken(kiaParser.COMMA, i)

        def getRuleIndex(self):
            return kiaParser.RULE_vars_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars_" ):
                listener.enterVars_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars_" ):
                listener.exitVars_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVars_" ):
                return visitor.visitVars_(self)
            else:
                return visitor.visitChildren(self)




    def vars_(self):

        localctx = kiaParser.Vars_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vars_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(kiaParser.VAR)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==kiaParser.VARIABLE:
                self.state = 52
                self.variable()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==kiaParser.COMMA:
                    self.state = 53
                    self.match(kiaParser.COMMA)
                    self.state = 54
                    self.variable()
                    self.state = 59
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 60
                self.match(kiaParser.COLON)
                self.state = 61
                self.types()
                self.state = 62
                self.match(kiaParser.SEMI_COLON)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(kiaParser.FLOAT, 0)

        def INTEGER(self):
            return self.getToken(kiaParser.INTEGER, 0)

        def getRuleIndex(self):
            return kiaParser.RULE_types

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypes" ):
                listener.enterTypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypes" ):
                listener.exitTypes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypes" ):
                return visitor.visitTypes(self)
            else:
                return visitor.visitChildren(self)




    def types(self):

        localctx = kiaParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            _la = self._input.LA(1)
            if not(_la==kiaParser.INTEGER or _la==kiaParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(kiaParser.FUNCTION, 0)

        def NAME_FUNCTION(self):
            return self.getToken(kiaParser.NAME_FUNCTION, 0)

        def OPEN_PAREN(self):
            return self.getToken(kiaParser.OPEN_PAREN, 0)

        def variable(self):
            return self.getTypedRuleContext(kiaParser.VariableContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(kiaParser.CLOSE_PAREN, 0)

        def beginstmt(self):
            return self.getTypedRuleContext(kiaParser.BeginstmtContext,0)


        def getRuleIndex(self):
            return kiaParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = kiaParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(kiaParser.FUNCTION)
            self.state = 72
            self.match(kiaParser.NAME_FUNCTION)
            self.state = 73
            self.match(kiaParser.OPEN_PAREN)
            self.state = 74
            self.variable()
            self.state = 75
            self.match(kiaParser.CLOSE_PAREN)
            self.state = 76
            self.beginstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kiaParser.AssignContext)
            else:
                return self.getTypedRuleContext(kiaParser.AssignContext,i)


        def call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kiaParser.CallContext)
            else:
                return self.getTypedRuleContext(kiaParser.CallContext,i)


        def print_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kiaParser.Print_Context)
            else:
                return self.getTypedRuleContext(kiaParser.Print_Context,i)


        def beginstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kiaParser.BeginstmtContext)
            else:
                return self.getTypedRuleContext(kiaParser.BeginstmtContext,i)


        def if_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kiaParser.If_Context)
            else:
                return self.getTypedRuleContext(kiaParser.If_Context,i)


        def while_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kiaParser.While_Context)
            else:
                return self.getTypedRuleContext(kiaParser.While_Context,i)


        def break_cont(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kiaParser.Break_contContext)
            else:
                return self.getTypedRuleContext(kiaParser.Break_contContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kiaParser.FunctionContext)
            else:
                return self.getTypedRuleContext(kiaParser.FunctionContext,i)


        def getRuleIndex(self):
            return kiaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = kiaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << kiaParser.BEGIN) | (1 << kiaParser.CYCLE) | (1 << kiaParser.IF) | (1 << kiaParser.CALL) | (1 << kiaParser.FUNCTION) | (1 << kiaParser.VARIABLE) | (1 << kiaParser.PRINT) | (1 << kiaParser.BREAK) | (1 << kiaParser.CONTINUE))) != 0):
                self.state = 86
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [kiaParser.VARIABLE]:
                    self.state = 78
                    self.assign()
                    pass
                elif token in [kiaParser.CALL]:
                    self.state = 79
                    self.call()
                    pass
                elif token in [kiaParser.PRINT]:
                    self.state = 80
                    self.print_()
                    pass
                elif token in [kiaParser.BEGIN]:
                    self.state = 81
                    self.beginstmt()
                    pass
                elif token in [kiaParser.IF]:
                    self.state = 82
                    self.if_()
                    pass
                elif token in [kiaParser.CYCLE]:
                    self.state = 83
                    self.while_()
                    pass
                elif token in [kiaParser.BREAK, kiaParser.CONTINUE]:
                    self.state = 84
                    self.break_cont()
                    pass
                elif token in [kiaParser.FUNCTION]:
                    self.state = 85
                    self.function()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(kiaParser.VariableContext,0)


        def EQUAL(self):
            return self.getToken(kiaParser.EQUAL, 0)

        def expression(self):
            return self.getTypedRuleContext(kiaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return kiaParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = kiaParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.variable()
            self.state = 92
            self.match(kiaParser.EQUAL)
            self.state = 93
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CALL(self):
            return self.getToken(kiaParser.CALL, 0)

        def NAME_FUNCTION(self):
            return self.getToken(kiaParser.NAME_FUNCTION, 0)

        def OPEN_PAREN(self):
            return self.getToken(kiaParser.OPEN_PAREN, 0)

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kiaParser.VariableContext)
            else:
                return self.getTypedRuleContext(kiaParser.VariableContext,i)


        def CLOSE_PAREN(self):
            return self.getToken(kiaParser.CLOSE_PAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(kiaParser.COMMA)
            else:
                return self.getToken(kiaParser.COMMA, i)

        def getRuleIndex(self):
            return kiaParser.RULE_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = kiaParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(kiaParser.CALL)
            self.state = 96
            self.match(kiaParser.NAME_FUNCTION)
            self.state = 97
            self.match(kiaParser.OPEN_PAREN)
            self.state = 98
            self.variable()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==kiaParser.COMMA:
                self.state = 99
                self.match(kiaParser.COMMA)
                self.state = 100
                self.variable()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.match(kiaParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(kiaParser.PRINT, 0)

        def OPEN_PAREN(self):
            return self.getToken(kiaParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(kiaParser.CLOSE_PAREN, 0)

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kiaParser.VariableContext)
            else:
                return self.getTypedRuleContext(kiaParser.VariableContext,i)


        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kiaParser.LiteralContext)
            else:
                return self.getTypedRuleContext(kiaParser.LiteralContext,i)


        def getRuleIndex(self):
            return kiaParser.RULE_print_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_" ):
                listener.enterPrint_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_" ):
                listener.exitPrint_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_" ):
                return visitor.visitPrint_(self)
            else:
                return visitor.visitChildren(self)




    def print_(self):

        localctx = kiaParser.Print_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_print_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(kiaParser.PRINT)
            self.state = 109
            self.match(kiaParser.OPEN_PAREN)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==kiaParser.STRING or _la==kiaParser.VARIABLE:
                self.state = 112
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [kiaParser.VARIABLE]:
                    self.state = 110
                    self.variable()
                    pass
                elif token in [kiaParser.STRING]:
                    self.state = 111
                    self.literal()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(kiaParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(kiaParser.STRING, 0)

        def getRuleIndex(self):
            return kiaParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = kiaParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(kiaParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BeginstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(kiaParser.BEGIN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kiaParser.StatementContext)
            else:
                return self.getTypedRuleContext(kiaParser.StatementContext,i)


        def END(self):
            return self.getToken(kiaParser.END, 0)

        def SEMI_COLON(self, i:int=None):
            if i is None:
                return self.getTokens(kiaParser.SEMI_COLON)
            else:
                return self.getToken(kiaParser.SEMI_COLON, i)

        def getRuleIndex(self):
            return kiaParser.RULE_beginstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBeginstmt" ):
                listener.enterBeginstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBeginstmt" ):
                listener.exitBeginstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBeginstmt" ):
                return visitor.visitBeginstmt(self)
            else:
                return visitor.visitChildren(self)




    def beginstmt(self):

        localctx = kiaParser.BeginstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_beginstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(kiaParser.BEGIN)
            self.state = 122
            self.statement()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==kiaParser.SEMI_COLON:
                self.state = 123
                self.match(kiaParser.SEMI_COLON)
                self.state = 124
                self.statement()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(kiaParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(kiaParser.IF, 0)

        def OPEN_PAREN(self):
            return self.getToken(kiaParser.OPEN_PAREN, 0)

        def condition(self):
            return self.getTypedRuleContext(kiaParser.ConditionContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(kiaParser.CLOSE_PAREN, 0)

        def beginstmt(self):
            return self.getTypedRuleContext(kiaParser.BeginstmtContext,0)


        def getRuleIndex(self):
            return kiaParser.RULE_if_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_" ):
                listener.enterIf_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_" ):
                listener.exitIf_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_" ):
                return visitor.visitIf_(self)
            else:
                return visitor.visitChildren(self)




    def if_(self):

        localctx = kiaParser.If_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_if_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(kiaParser.IF)
            self.state = 133
            self.match(kiaParser.OPEN_PAREN)
            self.state = 134
            self.condition()
            self.state = 135
            self.match(kiaParser.CLOSE_PAREN)
            self.state = 136
            self.beginstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CYCLE(self):
            return self.getToken(kiaParser.CYCLE, 0)

        def OPEN_PAREN(self):
            return self.getToken(kiaParser.OPEN_PAREN, 0)

        def condition(self):
            return self.getTypedRuleContext(kiaParser.ConditionContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(kiaParser.CLOSE_PAREN, 0)

        def beginstmt(self):
            return self.getTypedRuleContext(kiaParser.BeginstmtContext,0)


        def getRuleIndex(self):
            return kiaParser.RULE_while_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_" ):
                listener.enterWhile_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_" ):
                listener.exitWhile_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_" ):
                return visitor.visitWhile_(self)
            else:
                return visitor.visitChildren(self)




    def while_(self):

        localctx = kiaParser.While_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_while_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(kiaParser.CYCLE)
            self.state = 139
            self.match(kiaParser.OPEN_PAREN)
            self.state = 140
            self.condition()
            self.state = 141
            self.match(kiaParser.CLOSE_PAREN)
            self.state = 142
            self.beginstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Break_contContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(kiaParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(kiaParser.CONTINUE, 0)

        def getRuleIndex(self):
            return kiaParser.RULE_break_cont

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreak_cont" ):
                listener.enterBreak_cont(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreak_cont" ):
                listener.exitBreak_cont(self)
